<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@color/grey" android:orientation="vertical" android:padding="20dp">

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        </FrameLayout>

        <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_view"
            app:headerLayout="@layout/nav_header" />

    </android.support.v4.widget.DrawerLayout>


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_gravity="center_horizontal" android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter_light"
            android:textAlignment="center" />

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:orientation="horizontal">

<!--            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:ems="10"
                android:hint="0"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />-->

            <Spinner
                android:id="@+id/lights_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".70" />

            <Button
                android:id="@+id/buttonCheck"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:onClick="checkRoom"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>

    <requestFocus/>

    <RelativeLayout android:id="@+id/contextLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:orientation="vertical" android:padding="20dp" android:visibility="visible">

        <TableLayout android:id="@+id/tableLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:padding="25dip">

            <TableRow android:id="@+id/tableRowLight" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dip">

                <TextView
                    android:id="@+id/textViewLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/light"
                    android:textAlignment="gravity"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewLightValue"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow android:id="@+id/tableRowNoise" android:layout_width="0dip" android:layout_height="wrap_content" android:padding="5dip">

                <TextView
                    android:id="@+id/textViewRoomId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/roomId"
                    android:textAlignment="gravity"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewRoomIdValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>

        <ImageView android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_below="@+id/tableLayout1" android:layout_centerHorizontal="true" android:layout_marginTop="32dp" android:contentDescription="@string/image_content_description" android:src="@drawable/ic_bulb_on"/>

        <LinearLayout android:id="@+id/linearLayoutButtons" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/buttonSwitchLight"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="14dp"
                android:onClick="switchLight"
                android:text="@string/lightonoff" />

            <Button
                android:id="@+id/buttonDelete"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="14dp"
                android:onClick="switchRinger"
                android:text="@string/delete" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>